welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:3: error: reassignment to val
	if (a=b) {
             ^greenTicket:6: error: reassignment to val
	if (a=c) {
             ^greenTicket:9: error: reassignment to val
	if (c=b) {
             ^greenTicket:12: error: reassignment to val
	if ((a=b) && (b=c)) {
              ^